# shared

./: .env  .env.example  README.md  alembic.ini  architecture_prod.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260616_2019_align_existing_db.py  20260616_2059_relax_legacy_recording_columns.py  20260621_1219_recording_status_text.py  9fe7951d61a0_initial_baseline.py
shared/: __init__.py  config.py  db.py  models.py  worker_base.py
